# Rover

./: Client.py  MANIFEST  README.md  Sensor.py  pyproject.toml
ArduCAM_Mini_2MP_Plus_functions.ino/: ArduCAM_Mini_2MP_Plus_functions.ino
Arduino/: ActionFunctions.cpp  ActionFunctions.h  Arduino.ino  CameraUtils.cpp  CameraUtils.h  UpdateFunctions.cpp  UpdateFunctions.h  Utils.cpp  Utils.h
ArduinoSensors/: ArduinoSensors.ino
Server/: Server.ino
src/Arduino/: ActionFunctions.cpp  Arduino.ino  Rover.cpp  Rover.h  Utils.cpp  Utils.h
src/Rover/: Client.py  RoverClient.py
src/Rover.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/Server/: Server.ino
src/Test/: Test.ino
